<resources>
    <string name="app_name">LINK Program</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="takeAPic">Take a Picture</string>
    <string name="yourName">Your Name</string>
    <string name="zipCode">Zip Code</string>
    <string name="registerNow">Register Now</string>
    <string name="menu_home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="location_finder">Location Finder</string>
    <string name="book_a_session">Book Now</string>
    <string name="book_session">Book Session</string>
    <string name="calendar">My Upcoming Sessions</string>
    <string name="instructor_comments">Instructor Comments</string>
    <string name="settings">Settings</string>
    <string name="share_the_app">Share the app</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="or">or</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="bookSession">Book Session</string>
    <string name="progressions">Progressions</string>
    <string name="myAccount">My Account</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="eventDate">Event Date</string>
    <string name="event">Event</string>
    <string name="availableSession">SELECT AVAILABLE SESSION</string>
    <string name="book">Book</string>
    <string name="title_loc">Session Date: </string>
    <string name="description_loc">Session Time: </string>
    <string name="amount_loc">Amount: $</string>
    <string name="date">Session Date :</string>
    <string name="time">Time</string>
    <string name="attachments">Attachments()</string>
    <string name="imgName">Image Name</string>
    <string name="buyAboard">Buy a Board</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="added_as_favourite">Added as Favourite</string>
    <string name="session_description">Session Description:</string>
    <string name="session_price">Session Fees :</string>
    <string name="progressionLevel1">Level 1 :</string>
    <string name="successfully_paid">SuccessFully Paid</string>
    <string name="choose_date">Select Date</string>
    <string name="choose_time">Estimated Arrival Time</string>
    <string name="instructors">Instructors</string>
    <string name="total_foils">Total Foils</string>
    <string name="description">The resort is situated on private -17acre lushy landscaped peninsula with a secluded beach and is located near the  Old San Juan historic district and many of the destination\'s top attractions.</string>
    <string name="skip">Skip Video</string>
    <string name="list">list</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="enterName">Enter Your Name</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterZipCode">Enter Zip Code</string>
    <string name="account">Already have an account? Click here.</string>
    <string name="location">Locations</string>
    <string name="session_location">Session Location :</string>
    <string name="Sessions">My Sessions</string>
    <string name="signIn">Sign In</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="resetPassword">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="Name">Name:</string>
    <string name="userEmail">user@Email</string>
    <string name="address">Address:</string>
    <string name="Email">Email:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="country">Country:</string>
    <string name="zip">Zip:</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="cardNum">Card Number:</string>
    <string name="exp">Exp</string>
    <string name="cvc">CVC</string>
    <string name="title_activity_maps">Map</string>
    <string name="yourLoctaion">Your Location:</string>
    <string name="range">Range:</string>
    <string name="edit_details">Edit Details</string>
    <string name="save">Save</string>
    <string name="desc_progression">You are now eligible for progression enrollment. \n Book Now</string>
    <string name="desc_progression_page">Successful completion of a discover session is required to advance to the Progression Model.</string>
    <string name="desc_progression_page1">Progression Enrollment is required to advance to the Progression Model.</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="buy_a_board_url">https://leadingedgewatersports.com/</string>
    <string-array name="range_array">
        <item>0</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
    <string name="gender">Gender :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_new_password">Enter Confirm New Password</string>
    <string name="pleaseEnterYourCard">Please enter your card details below  to confirm payment.</string>
    <string name="confirm">Confirm</string>
    <string name="discover_lesson">Discover Session</string>
    <string name="certificate">Get Certified</string>
    <string name="select">Welcome</string>
    <string name="session_details">Session Details</string>
    <string name="ok">OK</string>
    <string name="token_expired">Token Expired, please Login.</string>
    <string name="something_went_wrong">Something went wrong , please try again.</string>
    <string name="progressionType">Progression Enrollment</string>
    <string name="progressionStatus">Progression Status :</string>
    <string name="progressionEnrollment">Discovery Enrollment</string>
    <string name="progressionlevel1">Cruiser</string>
    <string name="progressionlevel2">Explorer</string>
    <string name="progressionlevel3">Sport</string>
    <string name="progressionlevel4">Pro</string>
    <string name="progression_enrollment_date">Progression Enrollment Date :</string>
    <string name="progression_enrollment_comment">Comment :</string>
    <string name="progression_enrollment_instructor_name">Instructor Name:</string>
    <string name="progression_enrollment_location_name">Location Name:</string>
    <string name="details">Progression Enrollment Details</string>
    <string name="progression_level_1">Progression Level 1</string>
    <string name="progression_level_2">Progression Level 2</string>
    <string name="progression_level_3">Progression Level 3</string>
    <string name="progression_level_4">Progression Level 4</string>
    <string name="progression_member">Member</string>
    <string name="sessionType">Session Type :</string>
    <string name="sessionCost">Session Cost :</string>
    <string name="welcomeTitle">If you are new to the sport click Discovery Session. If you are an existing eFoiler choose Get Certified.</string>
    <string name="noDataAvailable">No Data Available</string>
    <string name="you_are_here">You are here</string>
    <string name="united_states">United States</string>
    <string name="session_day">Session Day :</string>
    <string name="getCertified">Get Certified</string>
    <string name="videos">Videos</string>
    <string name="videoName">Video Name</string>
    <string name="videoTitle1">Welcome to the family!</string>
    <string name="videoTitle2">Safety</string>
    <string name="videoTitle3">First Ride</string>
    <string name="videoTitle4">How to Foil</string>
    <string name="videoTitle5">4\'4 Proper Stance</string>
    <string name="videoTitle6">Whitney\'s First eFoil Ride</string>
    <string name="videoTitle7">CT\'s First Ride</string>
    <string name="videoTitle8">Effortless Exploring</string>
    <string name="getCertifed">For experienced eFoilers who what to join our membership program please click below to schedule a certification session.</string>
    <string name="scheduleNow">Schedule Now</string>
    <string name="waiver">Please review and approve the waiver below.</string>
    <string name="age">Age :</string>
    <string name="weight">Weight</string>
    <string name="previousExperience">Previous Experience :</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="approve">Approve</string>
    <string name="experienceDescription">Experience Description :</string>
    <string name="availableTimeSlot">SELECT Available Dates</string>
    <string name="myUpcomingSession">My Upcoming Sessions</string>
    <string name="progressionLevel2">Level 2 :</string>
    <string name="progressionLevel3">Level 3 :</string>
    <string name="congratulations">Congratulations</string>
    <string name="certifiedBy">You\'re Now Certified by Super Admin on Date :</string>
    <string name="selectLanguage">Select Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="welcome_to_the_link_affiliate_app">Welcome to the LINK Affiliate App!</string>
    <string name="this_app_is_custom_built_for_customers_to_interact_with_our_partner_affiliates_all_over_the_world_to_ride_lift_efoils">This app is custom built for customers \n to interact with our Partner Affiliates \n all over the world to ride Lift eFoils</string>
    <string name="navigate_to_the_locations_window_to_find_the_affiliate_nearest_to_you_or_if_you_are_traveling_search_any_location_in_the_world_to_schedule_your_time_to_fly">Navigate to the locations window to \n find the Affiliate nearest to you or if \n you are traveling search any location \n in the world to schedule your time to fly</string>
    <string name="checkout_their_location_description_and_select_the_sessions_available_to_you_pick_your_date_and_time_to_schedule_your_session">Checkout their location description and \n select the sessions available to you, pick your \n date and time to schedule your session</string>
    <string name="for_those_eager_to_fly_like_a_pro_start_with_a_discovery_lesson_to_advance_to_the_progression_training_program">For those eager to fly like a pro start with a \n Discovery Lesson to advance to the \n Progression Training Program</string>
    <string name="once_you_complete_the_program_at_any_location_enroll_in_membership_to_utilize_lift_efoils_at_any_affiliate_location_at_a_discounted_rate">Once you complete the program at any location,\n enroll in Membership to utilize Lift eFoils \n at any Affiliate location at a discounted rate</string>
    <string name="welcome_to_the_family_come_fly_with_us">Welcome to the Family! \n Come Fly With Us!</string>
    <string name="let_s_fly">Let\'s Fly</string>
</resources>