<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        tools:ignore="UselessParent">


        <ScrollView
            android:id="@+id/radio_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_language">


            <RelativeLayout
                android:id="@+id/relative_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                tools:ignore="UselessLeaf,UselessParent">

                <Button
                    android:id="@+id/btnEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/english"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <Button
                    android:id="@+id/btnSpanish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnEnglish"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/spanish"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <Button
                    android:id="@+id/btnGerman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnSpanish"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/german"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <Button
                    android:id="@+id/btnFrench"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnGerman"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/french"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <Button
                    android:id="@+id/btnItalian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnFrench"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/italian"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />


            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            tools:ignore="UselessLeaf">


            <TextView
                android:id="@+id/txtSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_22"
                android:visibility="gone"
                tools:ignore="ButtonOrder,HardcodedText,RtlHardcoded,SpUsage,UnknownIdInLayout" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/selectLanguage"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txt_language"
            android:background="@color/gray" />


    </RelativeLayout>

</RelativeLayout>