<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.NavigationAboutActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="0dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardElevation="@dimen/dp_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_back_nav"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_weight="0.25"
                android:src="@drawable/back_button"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:gravity="center"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:text="About"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:id="@+id/img_plus"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_weight="0.25"
                android:src="@drawable/img_search"
                android:visibility="invisible"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_150"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_10"
                android:scaleType="centerInside"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/welcome_to_the_link_affiliate_app"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/this_app_is_custom_built_for_customers_to_interact_with_our_partner_affiliates_all_over_the_world_to_ride_lift_efoils"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/navigate_to_the_locations_window_to_find_the_affiliate_nearest_to_you_or_if_you_are_traveling_search_any_location_in_the_world_to_schedule_your_time_to_fly"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/checkout_their_location_description_and_select_the_sessions_available_to_you_pick_your_date_and_time_to_schedule_your_session"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/for_those_eager_to_fly_like_a_pro_start_with_a_discovery_lesson_to_advance_to_the_progression_training_program"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/once_you_complete_the_program_at_any_location_enroll_in_membership_to_utilize_lift_efoils_at_any_affiliate_location_at_a_discounted_rate"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/welcome_to_the_family_come_fly_with_us"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_14" />

            <Button
                android:id="@+id/btn_lets_fly_nav"
                android:layout_width="@dimen/dp_200"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/let_s_fly"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>