<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        tools:ignore="UselessParent">


        <ScrollView
            android:id="@+id/radio_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome_title">


            <RelativeLayout
                android:id="@+id/relative_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessLeaf,UselessParent">

                <Button
                    android:id="@+id/btn_discover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/discover_lesson"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <Button
                    android:id="@+id/btn_certificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_discover"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/certificate"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />


            </RelativeLayout>
        </ScrollView>


        <TextView
            android:id="@+id/txt_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/select"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp_18"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_select"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/welcomeTitle"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            tools:ignore="HardcodedText" />


    </RelativeLayout>
</RelativeLayout>